<?xml version="1.0" encoding="utf-8"?>

        <!--  android:layout_below="@+id/toolbar" -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:background="#ffffff"
            android:scrollbarAlwaysDrawVerticalTrack="true">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_gravity="center">
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone"
                    android:inputType="phone"
                    android:hint="@string/enter_phone_no"/>
            </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_password"/>
    </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginbutton"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:background="@drawable/button"
                android:textColor="#d32f2f"
                android:layout_gravity="center"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_yet"
            android:layout_gravity="center"
            android:paddingStart="120dp"
            android:paddingLeft="100dp"
            android:paddingEnd="80dp"
            android:paddingRight="80dp"
            android:textSize="18sp"
              android:layout_marginTop="30dp"
             android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:text="@string/signup"
        android:layout_marginTop="15dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"/>
</LinearLayout>